tests/mm0_mmu/fail/bad-whitespace2.mmu
--      v-- this is a LINE TABULATION
(sort s)
